<resources>
    <string name="BrandUIStyle">6</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_no_wifi">Wifi disconnected.</string>
    <string name="accessibility_text">Accessibility</string>
    <string name="accessibility_wifi_off">Wifi off.</string>
    <string name="accessibility_wifi_one_bar">Wifi one bar.</string>
    <string name="accessibility_wifi_security_type_none">Open network</string>
    <string name="accessibility_wifi_security_type_secured">Secure network</string>
    <string name="accessibility_wifi_signal_full">Wifi signal full.</string>
    <string name="accessibility_wifi_three_bars">Wifi three bars.</string>
    <string name="accessibility_wifi_two_bars">Wifi two bars.</string>
    <string name="account_intro_description">Smarter way to use your device by joining [BRAND_NAME] Services.</string>
    <string name="account_intro_title">[BRAND_NAME] Services Account</string>
    <string name="add_account_button_label">Set up account</string>
    <string name="add_baidu_button_label">Log in Baidu Yun</string>
    <string name="add_infocus_service_account">Add [BRAND_NAME] Services Account</string>
    <string name="amazon_in_sku">600WW</string>
    <string name="antivirus_des1">For consumer protection in accordance with government policy, an anti-virus program (McAfee Security) was installed and is currently running.</string>
    <string name="antivirus_des2">The anti-virus program will monitor your device in real-time and will be updated automatically.</string>
    <string name="antivirus_des3">Updating via mobile networks may result in additional charges depending on your payment plan.</string>
    <string name="antivirus_title">Driving antivirus Information</string>
    <string name="app_name">SetupWizard</string>
    <string name="auto_shutdown_time">30</string>
    <string name="available_via_carrier">Available via %1$s</string>
    <string name="available_via_passpoint">Available via %1$s</string>
    <string name="back_btn_lebel">BACK</string>
    <string name="backup_and_restore_description">"If you previously backed up your account, you can restore it to this phone now.

You can change your backup settings anytime in Settings."</string>
    <string name="backup_and_restore_title">Backup and restore</string>
    <string name="baidu_intro_description">You can enjoy seamless cloud storages integration with Baidu Yun by completing a few easy steps.</string>
    <string name="baidu_intro_title">Cloud storage for Baidu</string>
    <string name="baidu_progress_dialog_des">Please Wait...</string>
    <string name="brand_name">Commtiva</string>
    <string name="brand_name_proxy">Commtiva</string>
    <string name="brand_name_watermark">Our Company</string>
    <string name="bypass_setup_skip">SKIP ANYWAY</string>
    <string name="bypass_setup_skip_cancel">GO BACK</string>
    <string name="bypass_setup_tip_text">Tap skip anyway will skip the setup wizard and go to home screen. You can still complete the setup from system settings later.</string>
    <string name="bypass_setup_tip_title">Skip setup wizard</string>
    <string name="certinstaller_package">com.android.certinstaller</string>
    <string name="choose_timezone">Choose time zone</string>
    <string name="connected_via_carrier">Connected via %1$s</string>
    <string name="connected_via_network_scorer">Automatically connected via %1$s</string>
    <string name="connected_via_network_scorer_default">Automatically connected via network rating provider</string>
    <string name="connected_via_passpoint">Connected via %1$s</string>
    <string name="connected_via_wfa">Connected via Wi‑Fi assistant</string>
    <string name="data_usage_metered_auto">Automatic</string>
    <string name="data_usage_metered_no">Not metered</string>
    <string name="data_usage_metered_yes">Metered</string>
    <string name="datausage_dialog_negitive_btn">Cancel</string>
    <string name="datausage_dialog_positive_btn">OK</string>
    <string name="date_and_time">Date &amp; time settings</string>
    <string name="date_and_time_settings_summary">Set date, time, time zone, &amp; formats</string>
    <string name="date_and_time_settings_title">Date &amp; Time</string>
    <string name="date_and_time_settings_title_setup_wizard">Set date and time</string>
    <string name="date_picker_title">Date</string>
    <string name="date_time_24hour">Use 24-hour format</string>
    <string name="date_time_auto">Automatic date &amp; time</string>
    <string name="date_time_auto_summaryOff">Use network-provided time</string>
    <string name="date_time_auto_summaryOn">Use network-provided time</string>
    <string name="date_time_date_format">Choose date format</string>
    <string name="date_time_set_date">Set date</string>
    <string name="date_time_set_time">Set time</string>
    <string name="date_time_set_timezone">Select time zone</string>
    <string name="default_date_format">MM/dd/yyyy</string>
    <string name="device_checking_message">Welcome</string>
    <string name="dropbox_fih_description">Get free 2 GB Dropbox space to save your photos and videos automatically.</string>
    <string name="dropbox_fih_signin">Sign in with Dropbox</string>
    <string name="dropbox_fih_signup">Sign up with Dropbox</string>
    <string name="dropbox_fih_title">Dropbox</string>
    <string name="dual_sim_setting_call_title">Select a SIM for calls</string>
    <string name="dual_sim_setting_data_title">Select a SIM for mobile data</string>
    <string name="emergency_dial_hmd_message">Emergency</string>
    <string name="emergency_dial_message">Emergency call</string>
    <string name="eula_agree">Agree</string>
    <string name="eula_diagnostic_title">Report Diagnostic Info</string>
    <string name="eula_privacy_title">Privacy Policy</string>
    <string name="eula_sw_title">End User License Agreement for Software</string>
    <string name="eula_third_party_title">Privacy Policy towards the 3rd Party Suppliers</string>
    <string name="eula_title">User agreements</string>
    <string name="eula_toast_disagree">In order to use our services, you must agree to this Terms of Service.</string>
    <string name="expand_button_title">Advanced</string>
    <string name="insert_sim_cards">Insert SIM cards</string>
    <string name="insert_sim_cards_prompt_content">"Not sure how? Check the instructions that came with your phone.

Once you insert you SIM cards, they may take a few seconds to activicate."</string>
    <string name="next_btn_lebel">NEXT</string>
    <string name="please_select_phase2">Phase 2 authentication</string>
    <string name="proxy_exclusionlist_hint">example.com,mycomp.test.com,localhost</string>
    <string name="proxy_exclusionlist_label">Bypass proxy for</string>
    <string name="proxy_hostname_hint">proxy.example.com</string>
    <string name="proxy_hostname_label">Proxy hostname</string>
    <string name="proxy_port_hint">8080</string>
    <string name="proxy_port_label">Proxy port</string>
    <string name="proxy_settings_title">Proxy</string>
    <string name="proxy_url_hint">https://www.example.com/proxy.pac</string>
    <string name="proxy_url_title">"PAC URL: "</string>
    <string name="proxy_warning_limited_support">The HTTP proxy is used by the browser but may not be used by the other apps.</string>
    <string name="wifi_advanced_toggle_description_collapsed">Drop down list Advanced Options. Double-tap to expand.</string>
    <string name="wifi_dns1">DNS 1</string>
    <string name="wifi_dns1_hint">8.8.8.8</string>
    <string name="wifi_dns2">DNS 2</string>
    <string name="wifi_dns2_hint">8.8.4.4</string>
    <string name="wifi_do_not_validate_eap_server_warning">No certificate specified. Your connection will not be private.</string>
    <string name="wifi_eap_anonymous">Anonymous identity</string>
    <string name="wifi_eap_ca_cert">CA certificate</string>
    <string name="wifi_eap_domain">Domain</string>
    <string name="wifi_eap_identity">Identity</string>
    <string name="wifi_eap_method">EAP method</string>
    <string name="wifi_eap_user_cert">User certificate</string>
    <string name="wifi_gateway">Gateway</string>
    <string name="wifi_gateway_hint">192.168.1.1</string>
    <string name="wifi_ip_address">IP address</string>
    <string name="wifi_ip_address_hint">192.168.1.128</string>
    <string name="wifi_ip_settings">IP settings</string>
    <string name="wifi_network_prefix_length">Network prefix length</string>
    <string name="wifi_network_prefix_length_hint">24</string>
    <string name="wifi_no_domain_warning">Must specify a domain.</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_security">Security</string>
    <string name="wifi_shared">Share with other device users</string>
    <string name="wifi_show_advanced">Advanced options</string>
    <string name="wifi_show_password">Show password</string>
    <string name="wifi_ssid">Network name</string>
    <string name="wifi_ssid_hint">Enter the SSID</string>
    <string name="wifi_ssid_too_long">Network name is too long.</string>
    <string name="zone_auto">Automatic time zone</string>
    <string name="zone_auto_summaryOn">Use network-provided time zone</string>
</resources>